# alex-tavern

./: .gitignore  .mcp.json  AGENTS.md  Dockerfile  LICENSE  README.md  agent.md  entrypoint.sh  install.sh  pyproject.toml  start.sh  start_docker.sh  to_the_next.md
.agents/: mcp_config.json
.claude/: settings.json
.codex/: config.toml
.data/: config.json
.plan/: 33b-desenho-para-o-dono.md  HANDOFF-FABLE.md  HANDOFF-OPUS.md  HANDOFF.md  README.md  ROADMAP.md  apontamentos.md  explore-04-05-compaction.md  explore-plugin-version-ui.md  narrator-hint-generalization-handoff.md  report-remediation-final.md  to_the_next.md
docs/: 09-prompt-caching.md  plugin-ecosystem-topology-exploration-2026-07-17.md  plugin-storage.md
output29/: comparison-29.3.md
plugins/: __init__.py
scratchpad/: exp_roteiro_causal_stall.py  exp_roteiro_causal_stall_raw.json  exp_watcher_causal.py  exp_watcher_causal_raw.json  exp_watcher_delta.py  exp_watcher_latency.py  exp_watcher_raw.json  exp_wt09_fix.py  exp_wt09_mode2.py  t20_director_msgs.json
src/: alignment.py  compaction.py  confidentiality.py  config.py  disposition.py  drive.py  main.py  models.py  paths.py  perception.py  roteiro.py  runner.py  runtime_bootstrap.py  security.py  supervisor.py  watcher.py
tests/: conftest.py  test_action_intent.py  test_alignment.py  test_analyze_memory_run.py  test_api_limits.py  test_audible_speech_persistence.py  test_autonomous_burst.py  test_commands_presets.py  test_compaction.py  test_compaction_http.py  test_data_isolation.py  test_disposition.py  test_disposition_integration.py  (+38 more)
(+273 files in other folders)
