[project]
name = "alex-tavern"
version = "0.1.0"
description = "Multi-agent roleplay system with Narrator + Characters"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "mcp>=1.0.0",
]

[dependency-groups]
dev = [
    "playwright>=1.55.0",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
]

[tool.ruff]
# Shared sources are also embedded in the Android app's Python 3.11 runtime.
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short -m 'not llm'"
asyncio_mode = "auto"
markers = [
    "llm: marca testes que realizam chamadas reais de LLM (demorados)"
]
